# vllm-serving-practice

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.api  docker-compose.yml
docker/monitoring/: grafana-dashboard.json  prometheus.yml
k8s/: llm-api-inference.yaml
notebooks/: 01_vllm_setup.ipynb
src/: config.py
src/api/: dependencies.py  main.py
src/api/middleware/: metrics.py
src/api/routes/: batch.py  chat.py  health.py
src/models/: schemas.py
src/services/: batch_handler.py  vllm_client.py
tests/: test_batch.py  test_vllm_client.py
tests/benchmarks/: batch_performance.py
